--- a/src/sass/components/_homepage.sass
+++ b/src/sass/components/_homepage.sass
@@ -112,11 +112,13 @@
           bottom: 277px
 
     &-woman
+      z-index: 1
       position: absolute
       right: 40px
       bottom: 50px
 
     &-video
+      z-index: 0
       position: relative
       max-width: 1080px
       height: 600px
