--- a/src/sass/components/_index.sass
+++ b/src/sass/components/_index.sass
@@ -22,6 +22,8 @@
 .fadeOut
   animation-name: fadeOut
   animation-duration: 0.8s
+
+
 // FADE-IN
 // ===============
 @keyframes fadeIn
@@ -63,7 +65,7 @@
   animation-name: slideInUp
 
 
-// SLIDE-IN-UP
+// ZOOM-IN
 // ===============
 @keyframes zoomIn
   from
@@ -77,32 +79,16 @@
   animation-name: zoomIn
 
 
-
-// FLIP-IN-X
+// SLIDE-IN-LEFT
 // ===============
-@keyframes flipInX
+@keyframes slideInLeft
   from
-    transform: perspective(400px) rotate3d(1, 0, 0, 90deg)
-    animation-timing-function: ease-in
-    opacity: 0
-
-  40%
-    transform: perspective(400px) rotate3d(1, 0, 0, -20deg)
-    animation-timing-function: ease-in
-
-  60%
-    transform: perspective(400px) rotate3d(1, 0, 0, 10deg)
-    opacity: 1
-
-  80%
-    transform: perspective(400px) rotate3d(1, 0, 0, -5deg)
+    transform: translate3d(-100%, 0, 0)
+    visibility: visible
 
   to
-    transform: perspective(400px)
+    transform: translate3d(0, 0, 0)
 
-.flipInX
-  backface-visibility: visible !important
-  animation-name: flipInX
-
-
+.slideInLeft
+  animation-name: slideInLeft
 
