--- a/src/sass/layout/_general.sass
+++ b/src/sass/layout/_general.sass
@@ -75,3 +75,10 @@ html
   padding: 5px
   font-size: 12px
   border-bottom-left-radius: 5px
+
+input::-webkit-contacts-auto-fill-button
+  visibility: hidden
+  display: none !important
+  pointer-events: none
+  position: absolute
+  right: 0
